# elftools

./: README.md
add-section/: Cargo.toml  README.md
add-section/src/: main.rs
bin-hardening/: main.go
elfsec/: main.go
is-static/: Cargo.toml  README.md
is-static/src/: main.rs
sstrip/: Cargo.toml
sstrip/src/: main.rs
