[package]
name = "add-section"
version = "0.1.2"
edition = "2021"
license = "MIT"
readme = "README.md"
authors = ["Azathothas@pkgforge.dev", "QaidVoid@pkgforge.dev"]
description = "A tool to add a minimal Section Header to binaries with no section headers"

[dependencies]
goblin = "0.9.3"
byteorder = "1.5.0"

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = "z"
panic = "abort"
strip = true