[package]
name = "sstrip"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
authors = ["Azathothas@pkgforge.dev", "QaidVoid@pkgforge.dev"]
description = "A tool to remove everything not needed by a binary to run"

[dependencies]
goblin = "0.9.3"

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = "z"
panic = "abort"
strip = true